--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "chart.js": "^4.5.1",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.6.0",
-    "next": "15.5.4",
-    "nodemailer": "^6.9.15",
+    "next": "^16.0.7",
+    "nodemailer": "^7.0.11",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
